cargo-features = ["edition2024"]

[package]
name = "r2proto3"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
regex = "1.10.6"
walkdir = "2.5.0"

[profile.release]
opt-level = 's'
debug = false
lto = true
codegen-units = 1
panic = 'abort'
strip = true
incremental = false
